refactor (no icon)

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@
 
 # Project
 version=1.0.0
-group=com.cursee.examplemod
+group=com.cursee.overclocked_watches
 
 # Common
 minecraft_version=1.20.1
@@ -20,11 +20,11 @@ fabric_version=0.92.2+1.20.1
 fabric_loader_version=0.16.7
 
 # Mod options
-mod_name=ExampleMod
+mod_name=Overclocked Watches
 mod_author=Lupin, Jason13
-mod_id=examplemod
+mod_id=overclocked_watches
 license=All Rights Reserved
-description=The description of your mod. \nAccepts multilines.
+description=Time bends to your will! Create a watch to speed up crop and animal growth, and advance time from night to day and vice versa!
 
 # Gradle
 org.gradle.jvmargs=-Xmx3G
